k8s/traefik/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  selector:
    component: traefik
  ports:
    - protocol: TCP
      name: web
      port: 8000
      targetPort: web
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: admin
    - protocol: TCP
      name: websecure
      port: 4443
      targetPort: websecure
    - protocol: TCP
      name: metrics
      port: 8888
      targetPort: metrics
