k8s/traefik/traefik-dashboard-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: admin-auth
  tls:
    secretName: traefik-tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.localhost`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
    middlewares:
      - name: https
      - name: admin-auth
